/*
SPDX-FileCopyrightText: 2022-present Open Networking Foundation <info@opennetworking.org>

SPDX-License-Identifier: Apache-2.0
*/

syntax = "proto3";

package atomix.multiraft.map.v1;

import "google/protobuf/duration.proto";
import "gogoproto/gogo.proto";

message MapConfig {
    CacheConfig cache = 1 [
        (gogoproto.nullable) = false
    ];
}

message CacheConfig {
    bool enabled = 1;
    uint64 size = 2;
    google.protobuf.Duration evict_after = 3 [
        (gogoproto.stdduration) = true
    ];
    google.protobuf.Duration eviction_interval = 4 [
        (gogoproto.stdduration) = true
    ];
}
